add change for title header

--- a/students/umienchuk_oksana/exams_first/src/header/_header.html
+++ b/students/umienchuk_oksana/exams_first/src/header/_header.html
@@ -1,7 +1,7 @@
 <header class="header">
-    <div class="container">
-        <h1 class="main-title">Bhromaon</h1>
-        <p class="title-sub-text">Safe Travel Anywhere</p>
+    <div class="container header__container-main">
+        <h1 class="header__main-title">Bhromaon</h1>
+        <p class="header__title-sub-text">Safe Travel Anywhere</p>
         @@include("../form-search/_form-search.html")
         <div class="main-wrap">
             <a class="main__link" href="#menu-anchor">
