--- a/students/umienchuk_oksana/exams_first/src/review/_review.html
+++ b/students/umienchuk_oksana/exams_first/src/review/_review.html
@@ -2,7 +2,6 @@
     <div class="container">
         <div class="row">
             <h2 class="reviews-title reviews__title">What Our Tourists Say</h2>
-
             <div class="reviews-wrap">
                 <img class="reviews-wrap__img" src="./images/review-photo.png" alt="Review Photo">
                 <div class="reviews-wrap__block">
@@ -19,10 +18,11 @@
                             denouncing pleasure and praising pain was account born and I account will give you a
                             complete account of the system was account born and I account will give you a nai
                             the
-                            complete account of the system</p>
-
+                            complete account of the system
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 </section>
