md responsive added

--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/_hero-block.html
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/_hero-block.html
@@ -18,10 +18,12 @@
                         </div>
                     </form>
                     <div class="hero-block__scroll-down scroll-down">
-                        <p class="scroll-down__title">Scroll Down</p>
-                        <svg class="scroll-down__img">
-                            <use xlink:href="images/sprite.svg#chevron-down"></use>
-                        </svg>
+                        <a href="#nav" class="scroll-down__link">
+                            <p class="scroll-down__title">Scroll Down</p>
+                            <svg class="scroll-down__img">
+                                <use xlink:href="images/sprite.svg#chevron-down"></use>
+                            </svg>
+                        </a>
                     </div>
                 </div>
             </div>
