--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/_what-say.html
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/_what-say.html
@@ -6,10 +6,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-4 gtr">
+            <div class="col-4 col-md-12 what-say__img-wrapper">
                 <img class="what-say__img" src="images/man-tourist.png" alt="">
             </div>
-            <div class="col-8">
+            <div class="col-8 col-md-12">
                 <div class="what-say__wrapper what-say-item">
                     <h4 class="what-say-item__title">Sam Sumon</h4>
                     <p class="what-say-item__description">
