--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/_why-choose-us.html
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/_why-choose-us.html
@@ -1,7 +1,7 @@
 <section class="why-choose-us">
     <div class="container">
         <div class="row">
-            <div class="col-6">
+            <div class="col-6 col-md-12">
                 <div class="why-choose-us__text-wrapper">
                     <h2 class="why-choose-us__title">Why Choose Us</h2>
                     <p class="why-choose-us__description">
@@ -19,7 +19,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-6 col-md-12">
                 <div class="why-choose-us__images-wrapper">
                     <div class="why-choose-us__image-container">
                         <img class="why-choose-us__img-top" src="images/house-on-river.png" alt="house-on-river">
