--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/_steps.html
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/_steps.html
@@ -3,23 +3,23 @@
         <div class="col-12">
             <div class="row">
                 <div class="steps__wrapper">
-                    <div class="step__step-item step-item">
-                        <svg class="step-item__img">
+                    <div class="steps__steps-item steps-item">
+                        <svg class="steps-item__img">
                             <use xlink:href="images/sprite.svg#search"></use>
                         </svg>
-                        <p class="step-item__description">Search Places</p>
+                        <p class="steps-item__description">Search Places</p>
                     </div>
-                    <div class="step__step-item step-item">
-                        <svg class="step-item__img">
+                    <div class="steps__steps-item steps-item">
+                        <svg class="steps-item__img">
                             <use xlink:href="images/sprite.svg#check"></use>
                         </svg>
-                        <p class="step-item__description">Select Places</p>
+                        <p class="steps-item__description">Select Places</p>
                     </div>
-                    <div class="step__step-item step-item">
-                        <svg class="step-item__img">
+                    <div class="steps__steps-item steps-item">
+                        <svg class="steps-item__img">
                             <use xlink:href="images/sprite.svg#thumbs-up"></use>
                         </svg>
-                        <p class="step-item__description">Book &amp; Enjoy</p>
+                        <p class="steps-item__description">Book &amp; Enjoy</p>
                     </div>
                 </div>
             </div>
