--- a/students/umienchuk_oksana/exams_first/src/steps/_steps.html
+++ b/students/umienchuk_oksana/exams_first/src/steps/_steps.html
@@ -2,6 +2,10 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
+                <svg class="steps-oval" width="874" height="92" viewBox="0 0 874 92" fill="none">
+                    <path opacity="0.502" d="M1 91C1 91 217.014 -110.278 442.118 91C442.118 91 639.939 -111.5 873 91"
+                        stroke="white" stroke-linecap="round" stroke-dasharray="2 5" />
+                </svg>
                 <ul class="steps__items">
                     <li class="steps__item col-4">
                         <h2 class="steps__title">Search Places</h2>
@@ -21,6 +25,7 @@
                             <use xlink:href="#thumbs-up" />
                         </svg>
                     </li>
+
                 </ul>
             </div>
         </div>
