html_classes_added

--- a/students/savchak_marharyta/09_selectors/index.html
+++ b/students/savchak_marharyta/09_selectors/index.html
@@ -9,141 +9,151 @@
 </head>
 
 <body>
-    <header>
-        <div>
-            <nav>
-                <ul>
-                    <li><b>Home</b></li>
-                    <li>About me</li>
-                    <li>Skills</li>
-                    <li>Portfolio</li>
-                    <li>Contacts</li>
+    <header class="header">
+        <div class="devider">
+            <nav class="nav">
+                <ul class="menu">
+                    <li class="menu__item">
+                        <a href="#home" class="menu__link"><b>Home</b></a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#aboutme" class="menu__link"> About me</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#skills" class="menu__link"> Skills</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#portfolio" class="menu__link"> Portfolio</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#contact" class="menu__link"> Contact </a>
+                    </li>
                 </ul>
             </nav>
         </div>
     </header>
-    <main>
-        <section>
-            <h1>Denis Novik</h1>
-            <img src="images/jpeg-optimizer_BSPP2266.jpg" alt="Denis Novik">
+    <main class="main">
+        <section class="heroblock">
+            <h1 class="heroblock__title">Denis Novik</h1>
+            <img src="images/jpeg-optimizer_BSPP2266.jpg" alt="Denis Novik" class="heroblock__img">
         </section>
-        <section>
-            <h2>About me</h2>
-            <div>
-                <p>
+        <section class="aboutme">
+            <h2 class="aboutme__title">About me</h2>
+            <div class="aboutme__wrapper">
+                <p class="aboutme__text">
                     Hi, I'm Denis – UX/UI designer from Minsk.<br>
                     I'm interested in design and everything connected with it.
                 </p>
-                <p>
+                <p class="aboutme__text">
                     I'm studying at courses "Web and mobile design<br>
                     interfaces" in IT-Academy.
                 </p>
-                <p>
+                <p class="aboutme__text">
                     Ready to implement excellent projects<br>
                     with wonderful people.
                 </p>
             </div>
         </section>
-        <section>
-            <h2>Skills</h2>
-            <p>I work in such programs as</p>
-            <ul>
-                <li>
-                    <figure>
-                        <img src="images/ps_icon.svg" alt="">
-                        <figcaption>Adobe Photoshop</figcaption>
+        <section class="skills">
+            <h2 class="skills__title">Skills</h2>
+            <p class="skills__text">I work in such programs as</p>
+            <ul class="skills__list">
+                <li class="skills__list_item">
+                    <figure class="skill-show">
+                        <img class="skill-show__img" src="images/ps_icon.svg" alt="Photoshop">
+                        <figcaption class="skill-show__caption">Adobe Photoshop</figcaption>
                     </figure>
-                    <div>
-                        <img src="images/black_star.svg" alt="">
-                        <img src="images/black_star.svg" alt="">
-                        <img src="images/black_star.svg" alt="">
-                        <img src="images/black_star.svg" alt="">
-                        <img src="images/gray_star.svg" alt="">
+                    <div class="rating">
+                        <img class="rating__img" src="images/black_star.svg" alt="black star">
+                        <img class="rating__img" src="images/black_star.svg" alt="black star">
+                        <img class="rating__img" src="images/black_star.svg" alt="black star">
+                        <img class="rating__img" src="images/black_star.svg" alt="black star">
+                        <img class="rating__img" src="images/gray_star.svg" alt="gray star">
                     </div>
 
                 </li>
-                <li>
-                    <figure>
-                        <img src="images/ai_icon.svg" alt="">
-                        <figcaption>Adobe Illustrator</figcaption>
+                <li class="skills__list_item">
+                    <figure class="skill-show">
+                        <img class="skill-show__img" src="images/ai_icon.svg" alt="Adobe Illustrator">
+                        <figcaption class="skill-show__caption">Adobe Illustrator</figcaption>
                     </figure>
-                    <div>
-                        <img src="images/black_star.svg" alt="">
-                        <img src="images/black_star.svg" alt="">
-                        <img src="images/black_star.svg" alt="">
-                        <img src="images/gray_star.svg" alt="">
-                        <img src="images/gray_star.svg" alt="">
+                    <div class="rating">
+                        <img class="rating__img" src="images/black_star.svg" alt="black star">
+                        <img class="rating__img" src="images/black_star.svg" alt="black star">
+                        <img class="rating__img" src="images/black_star.svg" alt="black star">
+                        <img class="rating__img" src="images/gray_star.svg" alt="gray star">
+                        <img class="rating__img" src="images/gray_star.svg" alt="gray star">
                     </div>
                 </li>
-                <li>
-                    <figure>
-                        <img src="images/ae_icon.svg" alt="">
-                        <figcaption>Adobe After Effects</figcaption>
+                <li class="skills__list_item">
+                    <figure class="skill-show">
+                        <img class="skill-show__img" class="images/ae_icon.svg" alt="After Effects">
+                        <figcaption class="skill-show__caption">Adobe After Effects</figcaption>
                     </figure>
-                    <div>
-                        <img src="images/black_star.svg" alt="">
-                        <img src="images/black_star.svg" alt="">
-                        <img src="images/black_star.svg" alt="">
-                        <img src="images/black_star.svg" alt="">
-                        <img src="images/gray_star.svg" alt="">
+                    <div class="rating">
+                        <img class="rating__img" src="images/black_star.svg" alt="black star">
+                        <img class="rating__img" src="images/black_star.svg" alt="black star">
+                        <img class="rating__img" src="images/black_star.svg" alt="black star">
+                        <img class="rating__img" src="images/black_star.svg" alt="black star">
+                        <img class="rating__img" src="images/gray_star.svg" alt="gray star">
                     </div>
                 </li>
-                <li>
-                    <figure>
-                        <img src="images/figma_icon.svg" alt="">
-                        <figcaption>Figma</figcaption>
+                <li class="skills__list_item">
+                    <figure class="skill-show">
+                        <img class="skill-show__img" src="images/figma_icon.svg" alt="Figma">
+                        <figcaption class="skill-show__caption">Figma</figcaption>
                     </figure>
-                    <div>
-                        <img src="images/black_star.svg" alt="">
-                        <img src="images/black_star.svg" alt="">
-                        <img src="images/black_star.svg" alt="">
-                        <img src="images/black_star.svg" alt="">
-                        <img src="images/gray_star.svg" alt="">
+                    <div class="rating">
+                        <img class="rating__img" src="images/black_star.svg" alt="black star">
+                        <img class="rating__img" src="images/black_star.svg" alt="black star">
+                        <img class="rating__img" src="images/black_star.svg" alt="black star">
+                        <img class="rating__img" src="images/black_star.svg" alt="black star">
+                        <img class="rating__img" src="images/gray_star.svg" alt="gray star">
                     </div>
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Portfolio</h2>
-            <div>
-                <img src="images/jpeg-optimizer_Слой 8.png" alt="">
-                <p>
-                    <a href="#">Online fashion store - Homepage</a>
+        <section class="portfolio">
+            <h2 class="portfolio__title">Portfolio</h2>
+            <div class="portfolio__item">
+                <img class="portfolio__img" src="images/jpeg-optimizer_Слой 8.png" alt="new collection advertisemet">
+                <p class="portfolio__wrapper">
+                    <a class="portfolio__link" href="#">Online fashion store - Homepage</a>
                 </p>
             </div>
-            <div>
-                <img src="images/jpeg-optimizer_reebok_web.png" alt="">
-                <p>
-                    <a href="#">Reebok Store - Concept</a>
+            <div class="portfolio__item">
+                <img class="portfolio__img" src="images/jpeg-optimizer_reebok_web.png" alt="reebook bigboard">
+                <p class="portfolio__wrapper">
+                    <a class="portfolio__link" href="#">Reebok Store - Concept</a>
                 </p>
             </div>
-            <div>
-                <img src="images/jpeg-optimizer_reebok_web (1).png" alt="">
-                <p>
-                    <a href="#">Braun Landing Page - Concept</a>
+            <div class="portfolio__item">
+                <img class="portfolio__img" src="images/jpeg-optimizer_reebok_web (1).png" alt="camera">
+                <p class="portfolio__wrapper">
+                    <a class="portfolio__link" href="#">Braun Landing Page - Concept</a>
                 </p>
             </div>
         </section>
     </main>
-    <footer>
-        <h2>Contacts</h2>
-        <p>Want to know more or just chat? <br> You are welcome!</p>
-        <button type="button">Send message</button>
-        <ul>
-            <li>
-                <img src="images/1st_footer_icon.svg" alt="">
+    <footer class="footer">
+        <h2 class="footer__title">Contacts</h2>
+        <p class="footer__text">Want to know more or just chat? <br> You are welcome!</p>
+        <button class="footer__button" type="button">Send message</button>
+        <ul class="contacts">
+            <li class="contacts__item">
+                <img class="contacts__img" src="images/1st_footer_icon.svg" alt="LinkedIn icon">
             </li>
-            <li>
-                <img src="images/2ndfooter_icon.svg" alt="">
+            <li class="contacts__item">
+                <img class="contacts__img" src="images/2ndfooter_icon.svg" alt="Instagram icon">
             </li>
-            <li>
-                <img src="images/3rd_footer_icon.svg" alt="">
+            <li class="contacts__item">
+                <img class="contacts__img" src="images/3rd_footer_icon.svg" alt="Behance icon">
             </li>
-            <li>
-                <img src="images/4th_footer_icon.svg" alt="">
+            <li class="contacts__item">
+                <img class="contacts__img" src="images/4th_footer_icon.svg" alt="Dribbble icon">
             </li>
         </ul>
-        <p>Like me on <br>
+        <p class="portfolio__item">Like me on <br>
             LinkedIn, Instagram, Behance,<br>
             Dribble</p>
     </footer>
