--- a/students/savchak_marharyta/09_selectors/index.html
+++ b/students/savchak_marharyta/09_selectors/index.html
@@ -13,8 +13,8 @@
         <div class="devider">
             <nav class="nav">
                 <ul class="menu">
-                    <li class="menu__item">
-                        <a href="#home" class="menu__link"><b>Home</b></a>
+                    <li class="menu__item ">
+                        <a href="#home" class="menu__link_home">Home</a>
                     </li>
                     <li class="menu__item">
                         <a href="#aboutme" class="menu__link"> About me</a>
