after_effects_img_error_fixed

--- a/students/savchak_marharyta/09_selectors/index.html
+++ b/students/savchak_marharyta/09_selectors/index.html
@@ -87,7 +87,7 @@
                 </li>
                 <li class="skills__list_item">
                     <figure class="skill-show">
-                        <img class="skill-show__img" class="images/ae_icon.svg" alt="After Effects">
+                        <img class="skill-show__img" src="images/ae_icon.svg" alt="After Effects">
                         <figcaption class="skill-show__caption">Adobe After Effects</figcaption>
                     </figure>
                     <div class="rating">
