--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/_why-choose-us.html
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/_why-choose-us.html
@@ -22,10 +22,10 @@
             <div class="col-6 col-md-12">
                 <div class="why-choose-us__images-wrapper">
                     <div class="why-choose-us__image-container">
-                        <img class="why-choose-us__img-top" src="images/house-on-river.png" alt="house-on-river">
+                        <img class="why-choose-us__img" src="images/house-on-river.png" alt="house-on-river">
                     </div>
                     <div class="why-choose-us__image-container">
-                        <img class="why-choose-us__img-bottom" src="images/header-background.png" alt="mountains">
+                        <img class="why-choose-us__img" src="images/blue-maunt.png" alt="mountains">
                     </div>
                 </div>
             </div>
