--- a/students/savchak_marharyta/10_block_model/productly/index.html
+++ b/students/savchak_marharyta/10_block_model/productly/index.html
@@ -4,10 +4,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Productly</title>
 </head>
 
 <body>
+    <header class="header">
+        <div class="logo">
+            <img class="logo__img" src="images/Bitmap.png" alt="logo">
+            <img src="images/Productly.svg" alt="logo text" class="logo__img_text">
+        </div>
+        <nav class="nav">
+            <ul class="menu">
+                <li class="menu__item">Product</li>
+                <li class="menu__item">Customers</li>
+                <li class="menu__item">Pricing</li>
+                <li class="menu__item">Resources</li>
+            </ul>
+        </nav>
+        <div class="buttons">
+            <a href="#" class="buttons__sign-in">Sign In</a>
+            <a href="#" class="buttons__sign-up">Sign Up</a>
+        </div>
+    </header>
+    <main>
+        <section class="heroblock">
+            <div class="content">
+                <h1 class="heroblock__title"></h1>
+                <p class="heroblock__text"></p>
+                <a href="" class="heroblock__button"></a>
+            </div>
+            <img src="images/Image.svg" alt="Happy people" class="heroblock__img">
+        </section>
+    </main>
 
 </body>
 
