--- a/students/savchak_marharyta/10_block_model/novik/index.html
+++ b/students/savchak_marharyta/10_block_model/novik/index.html
@@ -14,7 +14,7 @@
             <nav class="nav">
                 <ul class="menu">
                     <li class="menu__item ">
-                        <a href="#home" class="menu__link_home">Home</a>
+                        <a href="#home" class="menu__link">Home</a>
                     </li>
                     <li class="menu__item">
                         <a href="#aboutme" class="menu__link"> About me</a>
