productly_css_first_eddition

--- a/students/savchak_marharyta/10_block_model/productly/index.html
+++ b/students/savchak_marharyta/10_block_model/productly/index.html
@@ -9,30 +9,40 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header container clear-fix">
         <div class="logo">
             <img class="logo__img" src="images/Bitmap.png" alt="logo">
-            <img src="images/Productly.svg" alt="logo text" class="logo__img_text">
+            <img src="images/Productly.svg" alt="logo text" class="logo__img">
         </div>
         <nav class="nav">
             <ul class="menu">
-                <li class="menu__item">Product</li>
-                <li class="menu__item">Customers</li>
-                <li class="menu__item">Pricing</li>
-                <li class="menu__item">Resources</li>
+                <li class="menu__item">
+                    <a href="#" class="menu__link"> Product </a>
+                </li>
+                <li class="menu__item">
+                    <a href="#" class="menu__link">Customers</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#" class="menu__link">Pricing</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#" class="menu__link">Resources</a>
+                </li>
             </ul>
         </nav>
-        <div class="buttons">
-            <a href="#" class="buttons__sign-in">Sign In</a>
-            <a href="#" class="buttons__sign-up">Sign Up</a>
+        <div class="header__buttons">
+            <a href="#" class="buttons__sign-in btn">Sign In</a>
+            <a href="#" class="buttons__sign-up btn">Sign Up</a>
         </div>
     </header>
     <main>
-        <section class="heroblock">
+        <section class="heroblock container clear-fix">
             <div class="content">
-                <h1 class="heroblock__title"></h1>
-                <p class="heroblock__text"></p>
-                <a href="" class="heroblock__button"></a>
+                <h1 class="heroblock__title">The Design Thinking superpowers</h1>
+                <p class="heroblock__text">Tools, tutorials, design and innovation experts, all in one <br>
+                    place! The most intuitive way to imagine your next user <br>
+                    experience.</p>
+                <a href="" class="heroblock__button"> Get started</a>
             </div>
             <img src="images/Image.svg" alt="Happy people" class="heroblock__img">
         </section>
