--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/_nav.html
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/_nav.html
@@ -6,8 +6,12 @@
                     <p class="logo">Bhromaon</p>
                 </div>
             </div>
-            <div class="col-6 col-lg-8 col-md-12">
+            <div class="col-6 col-lg-8 col-md-12 col-sm-12">
                 <div class="menu-wrapper">
+                    <input class="menu-open-input" type="checkbox" id="menu_open">
+                    <label class="menu-open-label" for="menu_open">
+                        <span class="menu-open-label__line"></span>
+                    </label>
                     <ul class="menu-wrapper__item menu">
                         <li class="menu__item">
                             <a href="#" class="menu__link">Who We Are</a>
