--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/index.html
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1">
     <title>Travel With Us</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/search.svg" type="image/x-icon">
 </head>
 
 <body class="page">
