add header and whyus section

--- a/students/linov_mykhailo/exam_one/src/index.html
+++ b/students/linov_mykhailo/exam_one/src/index.html
@@ -9,8 +9,10 @@
 </head>
 
 <body class="page">
+    @@include('./_header.html')
     <main class="main">
-
+        @@include('./_whychooseus.html')
+        @@include('./_icons.html')
     </main>
 </body>
 
