--- a/students/umienchuk_oksana/exams_first/src/header/_header.html
+++ b/students/umienchuk_oksana/exams_first/src/header/_header.html
@@ -14,7 +14,7 @@
     </div>
     <nav class="menu header__menu" id="menu-anchor">
         <div class="container">
-            <div class="flex">
+            <div class="header-flex">
                 <h3 class="logo menu__logo">
                     <a class="menu__logo-link" href="#">Bhromaon</a>
                 </h3>
