--- a/students/umienchuk_oksana/exams_first/src/content/_content.html
+++ b/students/umienchuk_oksana/exams_first/src/content/_content.html
@@ -1,6 +1,6 @@
 <section class="content content-first">
     <div class="container">
-        <div class="row">
+        <div class="row  col-md-12">
             <div class="content-block content__left">
                 <p class="content__sub-text">Spain</p>
                 <h4 class="content__title">Grand Spain Madrid</h4>
@@ -15,7 +15,7 @@
 </section>
 <section class="content content-second">
     <div class="container">
-        <div class="row">
+        <div class="row col-md-12">
             <div class="content-block content__right">
                 <p class="content__sub-text">Spain</p>
                 <h4 class="content__title">Grand Spain Madrid</h4>
