--- a/students/savchak_marharyta/10_block_model/productly/index.html
+++ b/students/savchak_marharyta/10_block_model/productly/index.html
@@ -9,30 +9,36 @@
 </head>
 
 <body>
-    <header class="header container clear-fix">
-        <div class="logo">
-            <img class="logo__img" src="images/Bitmap.png" alt="logo">
-            <img src="images/Productly.svg" alt="logo text" class="logo__img">
+    <header class="header container ">
+        <div class="logo ">
+            <div class="logo__wrapper">
+                <img class="logo__img " src="images/Bitmap.png" alt="logo">
+            </div>
+            <div class="logo__wrapper">
+                <img src="images/Productly.svg" alt="logo text" class="logo__img  ">
+            </div>
         </div>
-        <nav class="nav">
-            <ul class="menu">
-                <li class="menu__item">
-                    <a href="#" class="menu__link"> Product </a>
-                </li>
-                <li class="menu__item">
-                    <a href="#" class="menu__link">Customers</a>
-                </li>
-                <li class="menu__item">
-                    <a href="#" class="menu__link">Pricing</a>
-                </li>
-                <li class="menu__item">
-                    <a href="#" class="menu__link">Resources</a>
-                </li>
-            </ul>
-        </nav>
+        <ul class="menu">
+            <li class="menu__item">
+                <a href="#" class="menu__link"> Product </a>
+            </li>
+            <li class="menu__item">
+                <a href="#" class="menu__link">Customers</a>
+            </li>
+            <li class="menu__item">
+                <a href="#" class="menu__link">Pricing</a>
+            </li>
+            <li class="menu__item">
+                <a href="#" class="menu__link">Resources</a>
+            </li>
+        </ul>
         <div class="header__buttons">
-            <a href="#" class="buttons__sign-in btn">Sign In</a>
-            <a href="#" class="buttons__sign-up btn">Sign Up</a>
+            <div class="button__wrapper">
+                <a href="#" class="buttons__sign-in btn">Sign In</a>
+            </div>
+            <div class="button__wrapper">
+                <a href="#" class="buttons__sign-up btn">Sign Up</a>
+            </div>
         </div>
     </header>
     <main>
