productly_header_heroblock_done

--- a/students/savchak_marharyta/10_block_model/productly/index.html
+++ b/students/savchak_marharyta/10_block_model/productly/index.html
@@ -43,14 +43,18 @@
     </header>
     <main>
         <section class="heroblock container clear-fix">
-            <div class="content">
-                <h1 class="heroblock__title">The Design Thinking superpowers</h1>
-                <p class="heroblock__text">Tools, tutorials, design and innovation experts, all in one <br>
-                    place! The most intuitive way to imagine your next user <br>
-                    experience.</p>
-                <a href="" class="heroblock__button"> Get started</a>
+            <div class=" heroblock__wrapper ">
+                <div class="content">
+                    <h1 class="heroblock__title">The Design Thinking <br> superpowers</h1>
+                    <p class="heroblock__text">Tools, tutorials, design and innovation experts, all in one <br>
+                        place! The most intuitive way to imagine your next user <br>
+                        experience.</p>
+                    <div class="heroblock__button-wrapper">
+                        <a href="#" class="heroblock__button btn"> Get started</a>
+                    </div>
+                </div>
+                <img src="images/Image.svg" alt="Happy people" class="heroblock__img">
             </div>
-            <img src="images/Image.svg" alt="Happy people" class="heroblock__img">
         </section>
     </main>
 
