fill main content

--- a/students/linov_mykhailo/exam_one/src/_whychooseus.html
+++ b/students/linov_mykhailo/exam_one/src/_whychooseus.html
@@ -17,6 +17,7 @@
                 <img src="./images/river.png" alt="river house">
                 <img src="./images/mountain.png" alt="mountain" class="whyus-mountain">
             </div>
+            <div class="col-1"></div>
         </div>
     </div>
 </section>
