--- a/students/linov_mykhailo/exam_one/src/index.html
+++ b/students/linov_mykhailo/exam_one/src/index.html
@@ -13,6 +13,7 @@
     <main class="main">
         @@include('./_whychooseus.html')
         @@include('./_icons.html')
+        @@include('./_content.html')
     </main>
 </body>
 
