--- a/students/linov_mykhailo/exam_one/src/_header.html
+++ b/students/linov_mykhailo/exam_one/src/_header.html
@@ -23,7 +23,7 @@
                             </svg>
                             SEARCH</a>
                     </form>
-                    <a href="#" class="header__hero_scroll-down">Scroll Down
+                    <a href="#header-line" class="header__hero_scroll-down">Scroll Down
                         <svg xmlns="http://www.w3.org/2000/svg" width="14" height="16" viewBox="0 0 14 16" fill="none">
                             <path
                                 d="M6.46966 11.9211L0.396437 5.84786C0.103531 5.55496 0.103531 5.08008 0.396437 4.78721L1.10478 4.07886C1.39719 3.78646 1.87109 3.7859 2.16419 4.07761L7 8.89077L11.8358 4.07761C12.1289 3.7859 12.6028 3.78646 12.8952 4.07886L13.6035 4.78721C13.8964 5.08011 13.8964 5.55499 13.6035 5.84786L7.53034 11.9211C7.23744 12.214 6.76256 12.214 6.46966 11.9211Z"
@@ -34,7 +34,7 @@
             </div>
         </div>
     </div>
-    <div class="header-line">
+    <section class="header-line" id="header-line">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -50,5 +50,5 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 </header>
