--- a/students/savchak_marharyta/10_block_model/css_weather_forecast/index.html
+++ b/students/savchak_marharyta/10_block_model/css_weather_forecast/index.html
@@ -8,7 +8,70 @@
 </head>
 
 <body>
-
+    <main class="main">
+        <div class="container">
+            <h3 class="weather-forecast___title">CSS Weather Forecast</h3>
+            <img src="images/icon.svg" alt="weather forecast icon" class="weather-forecast__title-img">
+            <div class="weather-forecast__wrapper">
+                <div class="weather-forecast">
+                    <h3 class="weather-forecast__city"></h3>
+                    <p class="weather-forecast__temp"></p>
+                    <img src="images/icon (1).svg" alt="weather forecast icon" class="weather-forecast__img">
+                </div>
+                <div class="weather-forecast">
+                    <h3 class="weather-forecast__city"></h3>
+                    <p class="weather-forecast__temp"></p>
+                    <img src="images/icon (2).svg" alt="weather forecast icon" class="weather-forecast__img">
+                </div>
+                <div class="weather-forecast">
+                    <h3 class="weather-forecast__city"></h3>
+                    <p class="weather-forecast__temp"></p>
+                    <img src="images/icon (3).svg" alt="weather forecast icon" class="weather-forecast__img">
+                </div>
+                <div class="weather-forecast">
+                    <h3 class="weather-forecast__city"></h3>
+                    <p class="weather-forecast__temp"></p>
+                    <img src="images/icon (4).svg" alt="weather forecast icon" class="weather-forecast__img">
+                </div>
+                <div class="weather-forecast">
+                    <h3 class="weather-forecast__city"></h3>
+                    <p class="weather-forecast__temp"></p>
+                    <img src="images/icon (5).svg" alt="weather forecast icon" class="weather-forecast__img">
+                </div>
+                <div class="weather-forecast">
+                    <h3 class="weather-forecast__city"></h3>
+                    <p class="weather-forecast__temp"></p>
+                    <img src="images/icon (1).svg" alt="weather forecast icon" class="weather-forecast__img">
+                </div>
+                <div class="weather-forecast">
+                    <h3 class="weather-forecast__city"></h3>
+                    <p class="weather-forecast__temp"></p>
+                    <img src="images/" alt="weather forecast icon" class="weather-forecast__img">
+                </div>
+                <div class="weather-forecast">
+                    <h3 class="weather-forecast__city"></h3>
+                    <p class="weather-forecast__temp"></p>
+                    <img src="images/icon (6).svg" alt="weather forecast icon" class="weather-forecast__img">
+                </div>
+                <div class="weather-forecast">
+                    <h3 class="weather-forecast__city"></h3>
+                    <p class="weather-forecast__temp"></p>
+                    <img src="images/icon_9.svg" alt="weather forecast icon" class="weather-forecast__img">
+                </div>
+                <div class="weather-forecast">
+                    <h3 class="weather-forecast__city"></h3>
+                    <p class="weather-forecast__temp"></p>
+                    <img src="images/icon (7).svg" alt="weather forecast icon" class="weather-forecast__img">
+                </div>
+                <div class="weather-forecast">
+                    <h3 class="weather-forecast__city"></h3>
+                    <p class="weather-forecast__temp"></p>
+                    <img src="images/icon (8).svg" alt="weather forecast icon" class="weather-forecast__img">
+                </div>
+            </div>
+            <p class="last-massege"></p>
+        </div>
+    </main>
 </body>
 
 </html>
