--- a/students/linov_mykhailo/exam_one/src/index.html
+++ b/students/linov_mykhailo/exam_one/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1">
-    <title>BHROMAON</title>
+    <title>Travel With Us</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -15,6 +15,8 @@
         @@include('./_icons.html')
         @@include('./_content.html')
     </main>
+    @@include('./_footer.html')
+    @@include('./_svg.html')
 </body>
 
 </html>
