the examination royalty is completed

--- a/students/dunaieva_alona/exam_first_module/src/_header.html
+++ b/students/dunaieva_alona/exam_first_module/src/_header.html
@@ -15,11 +15,12 @@
                             Search
                         </button>
                     </form>
-                    <p class="search-bar__scroll">Scroll Down 
+                    <a class="search-bar__scroll-link" href="#footer"> 
+                        <p class="search-bar__sub-text">Scroll Down </p> 
                         <svg class="icon-cherrow">
                             <use xlink:href="./images/sprite.svg#chevron-down"></use>
                         </svg>
-                    </p>
+                    </a>
                 </div>
             </div>
         </div>
@@ -29,7 +30,11 @@
             <div class="row">
                 <div class="col-12">
                     <nav class="menu-wrapper">
-                        <p class="logo">Bhromaon</p>
+                        <p class="nav__logo logo">Bhromaon</p>
+                        <input class="menu-open-input" type="checkbox" name="" id="menu-open">
+                        <label class="menu-open-label md-mobile-only" for="menu-open">
+                            <span class="menu-open-label__line"></span>
+                        </label>
                         <ul class="menu">
                             <li class="menu__item">
                                 <a href="#" class="menu__link">Who We Are</a>
