--- a/students/dunaieva_alona/exam_first_module/src/_hero.html
+++ b/students/dunaieva_alona/exam_first_module/src/_hero.html
@@ -1,7 +1,7 @@
 <section class="hero">
     <div class="container">
         <div class="row">
-            <div class="col-6">
+            <div class="col-6 col-sm-12">
                 <h2 class="hero__title">Why choose us</h2>
                 <p class="hero__text">Tion and dislike men who are so beguiled and demoralized by desire by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee
                     <br>
@@ -11,36 +11,37 @@
                         <span>Explore Places</span>
                     </a>
             </div>
-            <div class="col-6">
-                <div class="images-wrapper">
-                    <img src="images/hero-first.jpg" alt="nature">
-                    <img src="images/hero-second.jpg" alt="nature">
-                </div>
+            <div class="col-6 col-sm-12 images-wrapper img">
+                <img class= "img__nature-first" src="images/hero-first.jpg" alt="nature">
+                <img class="img__nature-second" src="images/hero-second.jpg" alt="nature">
             </div>
         </div>
     </div>
-</section>
-<section class="action">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <ul class="icon-wrapper icon">
-                    <li class="icon__item">
-                        <svg class="icon-search">
-                            <use xlink:href="./images/sprite.svg#search"></use>
-                        </svg>
-                    </li>
-                    <li class="icon__item">
-                        <svg class="icon-check">
-                            <use xlink:href="./images/sprite.svg#check"></use>
-                        </svg>
-                    </li>
-                    <li class="icon__item">
-                        <svg class="icon-thumbs-up">
-                            <use xlink:href="./images/sprite.svg#thumbs-up"></use>
-                        </svg>
-                    </li>
-                </ul>
+    <div class="action">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <ul class="icons-wrapper icon">
+                        <li class="icon__list">
+                            <svg class="icon-search icon__item">
+                                <use xlink:href="./images/sprite.svg#search"></use>
+                            </svg>
+                            <h2 class="icon__subtitle">Search Places</h2>
+                        </li>
+                        <li class="icon__list">
+                            <svg class="icon-check icon__item">
+                                <use xlink:href="./images/sprite.svg#check"></use>
+                            </svg>
+                            <h2 class="icon__subtitle">Select Places</h2>
+                        </li>
+                        <li class="icon__list">
+                            <svg class="icon-thumbs-up icon__item">
+                                <use xlink:href="./images/sprite.svg#thumbs-up"></use>
+                            </svg>
+                            <h2 class="icon__subtitle">Book & Enjoy</h2>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
