--- a/students/dunaieva_alona/exam_first_module/src/index.html
+++ b/students/dunaieva_alona/exam_first_module/src/index.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum=scale=1">
-    <title>Productly</title>
+    <title>BHROMAON</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page">
-    @@include("_header.html");
+    @@include("_header.html")
     <main class="main">
-        @@include("_hero.html");
-        @@include("_first-service.html");
-        @@include("_second-service.html");
-        @@include("_feedback.html");
+        @@include("_hero.html")
+        @@include("_first-service.html")
+        @@include("_second-service.html")
+        @@include("_feedback.html")
     </main>
     @@include("_footer.html")
 </body>
