--- a/students/savchak_marharyta/10_block_model/css_weather_forecast/index.html
+++ b/students/savchak_marharyta/10_block_model/css_weather_forecast/index.html
@@ -10,83 +10,85 @@
 
 <body>
     <main class="main">
-        <div class="container">
-            <h3 class="weather-forecast___title">CSS Weather Forecast</h3>
-            <img src="images/icon.svg" alt="weather forecast icon" class="weather-forecast__title-img">
-            <div class="weather-forecast__wrapper">
-                <div class="weather-forecast">
-                    <h3 class="weather-forecast__city lisabon">Lisabon</h3>
-                    <div class="weather">
+        <div class="container ">
+            <div class="weather-forecast__title_wrapper ">
+                <h3 class="weather-forecast__title">CSS Weather Forecast</h3>
+                <img src="images/icon (1).svg" alt="weather forecast icon" class="weather-forecast__title-img">
+            </div>
+            <div class="weather-forecast__wrapper clear-fix ">
+                <div class="weather-forecast lisabon">
+                    <h3 class="weather-forecast__city ">Lisabon</h3>
+                    <div class="weather clear-fix">
                         <p class="weather-forecast__temp">21°C</p>
-                        <img src="images/icon (1).svg" alt="weather forecast icon" class="weather-forecast__img">
+                        <img src="images/icon.svg" alt="weather forecast icon" class="weather-forecast__img">
                     </div>
                 </div>
-                <div class="weather-forecast">
-                    <h3 class="weather-forecast__city paris">Paris</h3>
-                    <div class="weather">
+                <div class="weather-forecast paris">
+                    <h3 class="weather-forecast__city ">Paris</h3>
+                    <div class="weather clear-fix">
                         <p class="weather-forecast__temp">11°C</p>
                         <img src="images/icon (2).svg" alt="weather forecast icon" class="weather-forecast__img">
                     </div>
                 </div>
-                <div class="weather-forecast">
-                    <h3 class="weather-forecast__city belgrade">Belgrade</h3>
-                    <div class="weather">
+                <div class="weather-forecast belgrade">
+                    <h3 class="weather-forecast__city ">Belgrade</h3>
+                    <div class="weather clear-fix">
                         <p class="weather-forecast__temp">15°C</p>
                         <img src="images/icon (3).svg" alt="weather forecast icon" class="weather-forecast__img">
                     </div>
                 </div>
-                <div class="weather-forecast">
-                    <h3 class="weather-forecast__city venice">Venice</h3>
-                    <div class="weather">
+                <div class="weather-forecast venice">
+                    <h3 class="weather-forecast__city ">Venice</h3>
+                    <div class="weather clear-fix">
                         <p class="weather-forecast__temp">21°C</p>
                         <img src="images/icon (4).svg" alt="weather forecast icon" class="weather-forecast__img">
                     </div>
                 </div>
-                <div class="weather-forecast">
-                    <h3 class="weather-forecast__city tel-avive">Tel-Avive</h3>
-                    <div class="weather">
+                <div class="weather-forecast tel-avive">
+                    <h3 class="weather-forecast__city ">Tel-Avive</h3>
+                    <div class="weather clear-fix">
                         <p class="weather-forecast__temp">32°C</p>
                         <img src="images/icon (5).svg" alt="weather forecast icon" class="weather-forecast__img">
                     </div>
                 </div>
-                <div class="weather-forecast">
-                    <h3 class="weather-forecast__city cair">Cair</h3>
-                    <div class="weather">
+                <div class="weather-forecast cair">
+                    <h3 class="weather-forecast__city ">Cair</h3>
+                    <div class="weather clear-fix">
                         <p class="weather-forecast__temp">21°C</p>
-                        <img src="images/icon (1).svg" alt="weather forecast icon" class="weather-forecast__img">
+                        <img src="images/icon.svg" alt="weather forecast icon" class="weather-forecast__img">
                     </div>
                 </div>
-                <div class="weather-forecast">
-                    <h3 class="weather-forecast__city new-york">New-York</h3>
-                    <div class="weather">
-                        <p class="weather-forecast__temp">17°C</p>
-                        <img src="images/" alt="weather forecast icon" class="weather-forecast__img">
-                    </div>
-                </div>
-                <div class="weather-forecast">
-                    <h3 class="weather-forecast__city new-delhi">New-Delhi</h3>
-                    <div class="weather">
+                <div class="weather-forecast new-york">
+                    <h3 class="weather-forecast__city ">New-York</h3>
+                    <div class="weather clear-fix">
                         <p class="weather-forecast__temp">17°C</p>
                         <img src="images/icon (6).svg" alt="weather forecast icon" class="weather-forecast__img">
                     </div>
                 </div>
-                <div class="weather-forecast">
-                    <h3 class="weather-forecast__city san-francisco">San-Francisco</h3>
-                    <div class="weather">
+                <div class="weather-forecast new-delhi">
+                    <h3 class="weather-forecast__city ">New-Delhi</h3>
+                    <div class="weather clear-fix">
+                        <p class="weather-forecast__temp">17°C</p>
+                        <img src="images/icon_10.svg" alt="weather forecast icon" class="weather-forecast__img">
+                    </div>
+                </div>
+                <div class="weather-forecast san-francisco">
+                    <h3 class="weather-forecast__city ">San-Francisco</h3>
+                    <div class="weather clear-fix">
                         <p class="weather-forecast__temp">15°C</p>
                         <img src="images/icon_9.svg" alt="weather forecast icon" class="weather-forecast__img">
                     </div>
                 </div>
-                <div class="weather-forecast">
-                    <h3 class="weather-forecast__city tokyo">Tokyo</h3>
-                    <div class="weather">
+                <div class="weather-forecast tokyo">
+                    <h3 class="weather-forecast__city ">Tokyo</h3>
+                    <div class="weather clear-fix">
                         <p class="weather-forecast__temp">8°C</p>
                         <img src="images/icon (7).svg" alt="weather forecast icon" class="weather-forecast__img">
                     </div>
                 </div>
-                <div class="weather-forecast">
-                    <h3 class="weather-forecast__city sydney">Sydney</h3>
-                    <div class="weather">
+                <div class="weather-forecast sydney">
+                    <h3 class="weather-forecast__city ">Sydney</h3>
+                    <div class="weather clear-fix">
                         <p class="weather-forecast__temp">25°C</p>
                         <img src="images/icon (8).svg" alt="weather forecast icon" class="weather-forecast__img">
                     </div>
