31-32 JS. DOM - 2. Event - 1

--- a/main/js/31/src/index.html
+++ b/main/js/31/src/index.html
@@ -16,7 +16,7 @@
 
 <body class="page">
     <!-- before -->
-    <nav id="menu" title="ffff" data-nav-test="5">
+    <nav class="nav" id="menu" title="ffff" data-nav-test="5">
         <!-- preppend -->
         <h2>previous</h2>
         <ul class="menu dsfsdf">
