--- a/students/savchak_marharyta/10_block_model/css_weather_forecast/index.html
+++ b/students/savchak_marharyta/10_block_model/css_weather_forecast/index.html
@@ -18,7 +18,7 @@
             <div class="weather-forecast__wrapper clear-fix ">
                 <div class="weather-forecast lisabon">
                     <h3 class="weather-forecast__city ">Lisabon</h3>
-                    <div class="weather clear-fix">
+                    <div class="weather weather__half clear-fix">
                         <p class="weather-forecast__temp">21°C</p>
                         <img src="images/icon.svg" alt="weather forecast icon" class="weather-forecast__img">
                     </div>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="weather-forecast san-francisco">
                     <h3 class="weather-forecast__city ">San-Francisco</h3>
-                    <div class="weather clear-fix">
+                    <div class="weather weather__half clear-fix">
                         <p class="weather-forecast__temp">15°C</p>
                         <img src="images/icon_9.svg" alt="weather forecast icon" class="weather-forecast__img">
                     </div>
@@ -88,7 +88,7 @@
                 </div>
                 <div class="weather-forecast sydney">
                     <h3 class="weather-forecast__city ">Sydney</h3>
-                    <div class="weather clear-fix">
+                    <div class="weather weather__full  clear-fix">
                         <p class="weather-forecast__temp">25°C</p>
                         <img src="images/icon (8).svg" alt="weather forecast icon" class="weather-forecast__img">
                     </div>
