finish burger, add responsive

--- a/students/linov_mykhailo/exam_one/src/_content.html
+++ b/students/linov_mykhailo/exam_one/src/_content.html
@@ -1,7 +1,7 @@
 <section class="spain-one">
     <div class="container">
         <div class="row">
-            <div class="col-6">
+            <div class="col-6 col-md-12">
                 <div class="card">
                     <h6 class="card__header-six">Spain</h6>
                     <h5 class="card__header-five">Grand Spain Madrid</h5>
@@ -17,8 +17,7 @@
 <section class="spain-two">
     <div class="container">
         <div class="row">
-            <div class="col-6"></div>
-            <div class="col-6">
+            <div class="col-6 col-md-12">
                 <div class="card">
                     <h6 class="card__header-six">Spain</h6>
                     <h5 class="card__header-five">Grand Spain Madrid</h5>
