--- a/students/linov_mykhailo/exam_one/src/_whychooseus.html
+++ b/students/linov_mykhailo/exam_one/src/_whychooseus.html
@@ -1,23 +1,22 @@
 <section class="why-choose-us">
     <div class="container">
         <div class="row">
-            <div class="col-6">
+            <div class="col-6 col-md-12">
                 <h2 class="why-choose-us__header">Why Choose Us</h2>
                 <p class="why-choose-us__text">Tion and dislike men who are so beguiled and demoralized by desire by the
                     charms of pleasure of the
                     moment, so blinded by desire, that they cannot foresee
-                    <br><br>
-                    Ddislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded
+                </p>
+                <p class="why-choose-us__text"> Ddislike men who are so beguiled and demoralized by the charms of
+                    pleasure of the moment, so blinded
                     by desire, that.
                 </p>
                 <a href="#" class="btn">Explore Places</a>
             </div>
-            <div class="col-1"></div>
-            <div class="col-4">
-                <img src="./images/river.png" alt="river house">
-                <img src="./images/mountain.png" alt="mountain" class="whyus-mountain">
+            <div class="col-6 col-md-12">
+                <img src="./images/river.png" alt="river house" class="whyus-mountain-top">
+                <img src="./images/mountain.png" alt="mountain" class="whyus-mountain-bottom">
             </div>
-            <div class="col-1"></div>
         </div>
     </div>
 </section>
