--- a/students/savchak_marharyta/11_flexbox/index.html
+++ b/students/savchak_marharyta/11_flexbox/index.html
@@ -50,10 +50,57 @@
                         place! The most intuitive way to imagine your next user <br>
                         experience.</p>
                     <div class="heroblock__button-wrapper">
-                        <a href="#" class="heroblock__button btn"> Get started</a>
+                        <a href="#" class="big-orange__button btn"> Get started</a>
                     </div>
                 </div>
                 <img src="images/Image.svg" alt="Happy people" class="heroblock__img">
+            </div>
+        </section>
+        <section class="container">
+            <div class="background-picture__wrapper">
+                <img src="images/bg.svg" alt="background picture" class="background-picture">
+            </div>
+            <h2 class="first-section__title">We design tools to unveil your superpowers</h2>
+            <div class="row">
+                <div class="col-3">
+                    <div class="quality">
+                        <div class="quality__image-wrapper">
+                            <img src="images/icon bd.svg" alt="click icon">
+                        </div>
+                        <h4 class="quality__title">First click tests</h4>
+                        <p class="quality__text">While most people enjoy casino <br> gambling,</p>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="quality">
+                        <div class="quality__image-wrapper">
+                            <img src="images/icon bd (1).svg" alt="click icon">
+                        </div>
+                        <h4 class="quality__title">Design surveys</h4>
+                        <p class="quality__text">Sports betting, lottery and bingo playing for the fun</p>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="quality">
+                        <div class="quality__image-wrapper">
+                            <img class="quality__image" src="images/icon bd (2).svg" alt="click icon">
+                        </div>
+                        <h4 class="quality__title">Preference tests</h4>
+                        <p class="quality__text">The Myspace page defines the individual.</p>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="quality">
+                        <div class="quality__image-wrapper">
+                            <img src="images/icon bd (3).svg" alt="click icon">
+                        </div>
+                        <h4 class="quality__title">Five second tests</h4>
+                        <p class="quality__text">Personal choices and the overall personality of the person. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="button-wrapper">
+                <a href="#" class="first-section__button big-orange__button">Sign up Now</a>
             </div>
         </section>
     </main>
